# talos-audit-service

./: Dockerfile  Makefile  README.md  bootstrap.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.agent/: README.md
.agent/agents/design/: brand-guardian.md  ui-designer.md  ux-researcher.md  visual-storyteller.md  whimsy-injector.md
.agent/agents/engineering/: ai-engineer.md  backend-architect.md  devops-automator.md  frontend-developer.md  mobile-app-builder.md  rapid-prototyper.md
.agent/agents/marketing/: app-store-optimizer.md  content-creator.md  growth-hacker.md  instagram-curator.md  reddit-community-builder.md  tiktok-strategist.md  twitter-engager.md
.agent/agents/product/: feedback-synthesizer.md  sprint-prioritizer.md  trend-researcher.md
.agent/agents/project-management/: experiment-tracker.md  project-shipper.md  studio-producer.md
.agent/agents/studio-operations/: analytics-reporter.md  finance-tracker.md  infrastructure-maintainer.md  legal-compliance-checker.md  support-responder.md
.agent/agents/testing/: api-tester.md  performance-benchmarker.md  test-results-analyzer.md  tool-evaluator.md  workflow-optimizer.md
.agent/workflows/: README.md  pending-features.md
.agent/workflows/development/: run-dashboard.md  tga-workflow.md  update-readme.md
.agent/workflows/style-guides/: readme-style.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
.husky/: pre-commit
docs/wiki/: Architecture.md
scripts/: cleanup.sh  start.sh  test.sh
src/: bootstrap.py  config.py  main.py
src/adapters/: __init__.py  postgres_store.py
src/adapters/http/: __init__.py  main.py
src/core/: broadcaster.py
src/domain/: errors.py  merkle.py  models.py  services.py
src/ports/: common.py
tests/: test_api_flow.py  test_audit_service.py  test_merkle.py  test_proof_verification.py  test_sdk_integration.py  test_validation.py
