[project]
name = "talos-audit-service"
version = "1.1.1"
description = "Talos Protocol Audit Log Service"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic"
]

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "httpx",
    "uvicorn"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
