[project]
name = "talos-audit-service"
version = "1.1.16"
description = "Talos Protocol Audit Log Service"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "alembic"
]

[tool.setuptools]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "httpx",
    "uvicorn"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
